<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateGroupActivity"
        android:fitsSystemWindows="true">

    <ScrollView
            android:id="@+id/create_group_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10pt">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/newgroup_logo"
                    android:background="@drawable/chat_image"
                    android:layout_width="50pt"
                    android:layout_height="50pt"
                    android:layout_marginTop="30pt"
                    android:textSize="20pt"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/firacode_bold"
                    android:textFontWeight="900"
                    android:textStyle="bold"
                    android:letterSpacing="0.04"
                    android:gravity="center"
                    android:text="@string/heart"
                    android:textColor="@color/text_color" />

            <EditText
                    android:id="@+id/new_groupname_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:hint="@string/creategroup_hint"
                    android:layout_marginTop="20pt"
                    android:layout_marginHorizontal="40pt"
                    android:textCursorDrawable="@drawable/textbox_cursor"
                    android:background="@drawable/edit_text_background"
                    android:paddingVertical="5pt"
                    android:paddingHorizontal="5pt"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical">

            </EditText>

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/newgroup_public_choice">

                <RadioButton
                        android:id="@+id/newgroup_public_choice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="5pt"
                        android:paddingVertical="10pt"
                        android:gravity="center_vertical|end"
                        android:layout_marginHorizontal="40pt"
                        android:layout_marginTop="5pt"

                        app:thumbTint="@color/message_sender_background"
                        app:trackTint="@color/actionbar"

                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"
                        android:text="Public"
                        android:onClick="onGroupTypeChoice" />

                <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/newgroup_private_choice"
                        android:paddingHorizontal="5pt"
                        android:paddingVertical="10pt"
                        android:gravity="center_vertical|end"
                        android:layout_marginHorizontal="40pt"
                        android:layout_marginTop="5pt"

                        app:thumbTint="@color/message_sender_background"
                        app:trackTint="@color/actionbar"

                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"
                        android:text="Private"
                        android:onClick="onGroupTypeChoice" />

                <RadioButton
                        android:id="@+id/newgroup_geo_fenced_choice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="5pt"
                        android:paddingVertical="10pt"
                        android:gravity="center_vertical|end"
                        android:layout_marginHorizontal="40pt"
                        android:layout_marginTop="5pt"

                        app:thumbTint="@color/message_sender_background"
                        app:trackTint="@color/actionbar"

                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"
                        android:text="Geo-Fenced"
                        android:onClick="onGroupTypeChoice" />
            </RadioGroup>

            <LinearLayout
                    android:id="@+id/newgroup_geo_fenced_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:translationY="-30pt"
                    android:paddingTop="30pt"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:background="@drawable/rounded_rectangle_geofenced"
                    android:paddingBottom="8pt"
                    android:layout_marginHorizontal="25pt"
                    android:orientation="vertical"

                    android:elevation="5pt">

                <Button
                        android:id="@+id/newgroup_pick_location"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5pt"
                        android:backgroundTint="@color/location_message_background"

                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"
                        android:text="@string/creategroup_pick_location">

                </Button>
                <TableLayout
                        android:paddingHorizontal="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:stretchColumns="2">
                    <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingVertical="5dp">
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Location:"
                                android:textStyle="bold"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/text_color"
                            />
                        <EditText
                                android:layout_width="180dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/group_location"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/text_color"
                                android:gravity="center_horizontal"
                                />
                    </TableRow>

                    <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Radius:"
                                android:textStyle="bold"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/text_color"
                                />
                        <EditText
                                android:id="@+id/group_location_radius"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/text_color"
                                android:gravity="center_horizontal"
                                android:layout_width="180dp"
                                android:layout_height="wrap_content"/>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@+id/creategroup_button"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30pt"
            android:layout_height="30pt"
            android:layout_marginBottom="5pt"
            android:layout_alignParentBottom="true"

            android:backgroundTint="@color/button_background"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:text="Create Group">

    </Button>
</RelativeLayout>